--- a/Borrower/pom.xml
+++ b/Borrower/pom.xml
@@ -193,9 +193,9 @@
             <!--<version>2.43.1</version>-->
         <!--</dependency>-->
         <dependency>
-            <groupId>org.seleniumhq.selenium</groupId>
-            <artifactId>selenium-server-standalone</artifactId>
-            <version>2.53.0</version>
+            <groupId>io.github.bonigarcia</groupId>
+            <artifactId>webdrivermanager</artifactId>
+            <version>${io-github-bonigarcia.webdrivermanager.version}</version>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
