--- a/Underwriter/pom.xml
+++ b/Underwriter/pom.xml
@@ -193,9 +193,9 @@
         <!--</dependency>-->
 
         <dependency>
-            <groupId>org.seleniumhq.selenium</groupId>
-            <artifactId>selenium-server-standalone</artifactId>
-            <version>2.43.1</version>
+            <groupId>io.github.bonigarcia</groupId>
+            <artifactId>webdrivermanager</artifactId>
+            <version>${io-github-bonigarcia.webdrivermanager.version}</version>
         </dependency>
 
         <dependency>
