AUt-122 merge API

--- a/Environment/src/main/resources/dev1.properties
+++ b/Environment/src/main/resources/dev1.properties
@@ -1,11 +1,17 @@
 domain.prop=dv2app.opoqodev.com/
 
 borrower.url=http://dv1app.opoqodev.com/intdev-borrower
+borrower.ctx=/intdev-borrower
+domain.borrower=dv1app.opoqodev.com
 underwriter.url=http://dv1app.opoqodev.com/intdev-underwriter
+underwriter.ctx=/intdev-underwriter
+domain.underwriter=dv1app.opoqodev.com
 partner.url=http://dv1app.opoqodev.com/intdev-partner
+partner.ctx=/intdev-partner
 autoregistration.url=http://dv1app.opoqodev.com/intdev-borrower/home?useCase=automaticregistration
 investor.url=http://dv1pub.opoqodev.com/
 administration.url=http://dv1apl.opoqodev.com/administration
+administattion.ctx=/administration
 admin.password=changemenow!
 
 apollo.client.url=https://dv1apl.opoqodev.com/client
