--- a/Environment/src/main/resources/dev2.properties
+++ b/Environment/src/main/resources/dev2.properties
@@ -1,11 +1,17 @@
 domain.prop=dv2app.opoqodev.com/
 
 borrower.url=http://dv2app.opoqodev.com/stable-borrower
+borrower.ctx=/stable-borrower
+domain.borrower=dv2app.opoqodev.com
 underwriter.url=http://dv2app.opoqodev.com/stable-underwriter
+underwriter.ctx=/stable-underwriter
+domain.underwriter=dv2app.opoqodev.com
 partner.url=http://dv2app.opoqodev.com/partner
+partner.ctx=/partner
 autoregistration.url=http://dv2app.opoqodev.com/stable-borrower/home?useCase=automaticregistration
 investor.url=https://dv2pub.opoqodev.com
 administration.url=http://dv2apl.opoqodev.com/administration
+administattion.ctx=/administration
 admin.password=changemenow!
 
 domain.apollo=http://dv2apl.opoqodev.com
@@ -16,6 +22,6 @@ apollo.ctx.payment=/payment
 apollo.auth.url=http://dv2app.opoqodev.com/auth
 apollo.sso.url=https://dv2apl.opoqodev.com/sso
 
-crm.url=https://dv1crm.opoqodev.com/
+crm.url=https://dv2crm.opoqodev.com/
 
 database.instance=jdbc:oracle:thin:@DV2000.LEVERIS
