AUt-122 runnable on Dev2 and Dev1

--- a/Environment/src/main/resources/dev1.properties
+++ b/Environment/src/main/resources/dev1.properties
@@ -14,12 +14,15 @@ administration.url=http://dv1apl.opoqodev.com/administration
 administattion.ctx=/administration
 admin.password=changemenow!
 
+mdg.url=https://dv1mdg.opoqodev.com
+domain.mdg=dv1mdg.opoqodev.com
+
 apollo.client.url=https://dv1apl.opoqodev.com/client
 apollo.ctx.client=/client
 apollo.payment.url=https://dv1apl.opoqodev.com/payment
 apollo.ctx.payment=/payment
 apollo.auth.url=http://dv1app.opoqodev.com/auth
-apollo.sso.url=https://dv1apl.opoqodev.com/sso/
+apollo.sso.url=https://dv1apl.opoqodev.com/sso
 
 crm.url=https://dv1crm.opoqodev.com/
 
