--- a/Environment/src/main/resources/dev2.properties
+++ b/Environment/src/main/resources/dev2.properties
@@ -14,6 +14,9 @@ administration.url=http://dv2apl.opoqodev.com/administration
 administattion.ctx=/administration
 admin.password=changemenow!
 
+mdg.url=https://dv2mdg.opoqodev.com
+domain.mdg=dv2mdg.opoqodev.com
+
 domain.apollo=http://dv2apl.opoqodev.com
 apollo.client.url=https://dv2apl.opoqodev.com/client
 apollo.ctx.client=/client
