AUT-73 Login Package

--- a/Environment/src/main/resources/dev1.properties
+++ b/Environment/src/main/resources/dev1.properties
@@ -17,7 +17,7 @@ admin.password=changemenow!
 mdg.url=https://dv1mdg.opoqodev.com
 domain.mdg=dv1mdg.opoqodev.com
 
-apollo.client.url=https://dv1apl.opoqodev.com/client
+apollo.client.url=http://dv1apl.opoqodev.com/client
 apollo.ctx.client=/client
 apollo.payment.url=https://dv1apl.opoqodev.com/payment
 apollo.ctx.payment=/payment
