--- a/Environment/src/main/resources/dev2.properties
+++ b/Environment/src/main/resources/dev2.properties
@@ -18,7 +18,7 @@ mdg.url=https://dv2mdg.opoqodev.com
 domain.mdg=dv2mdg.opoqodev.com
 
 domain.apollo=http://dv2apl.opoqodev.com
-apollo.client.url=https://dv2apl.opoqodev.com/client
+apollo.client.url=http://dv2apl.opoqodev.com/client
 apollo.ctx.client=/client
 apollo.payment.url=https://dv2apl.opoqodev.com/payment
 apollo.ctx.payment=/payment
