AUT-73 Login Package : fix property investor.url

--- a/Environment/src/main/resources/dev1.properties
+++ b/Environment/src/main/resources/dev1.properties
@@ -9,7 +9,7 @@ domain.underwriter=dv1app.opoqodev.com
 partner.url=http://dv1app.opoqodev.com/intdev-partner
 partner.ctx=/intdev-partner
 autoregistration.url=http://dv1app.opoqodev.com/intdev-borrower/home?useCase=automaticregistration
-investor.url=http://dv1pub.opoqodev.com/
+investor.url=https://dv1pub.opoqodev.com
 administration.url=http://dv1apl.opoqodev.com/administration
 administattion.ctx=/administration
 admin.password=changemenow!
