AUT-105 Removing utils module, there are backup and gonna be in repo. ( bis) qa_automation-utils-${ex-module}.git

--- a/Apollo/pom.xml
+++ b/Apollo/pom.xml
@@ -13,6 +13,7 @@
     <artifactId>Apollo</artifactId>
     <packaging>jar</packaging>
 
+    <!-- TODO to check if it is still necessary -->
     <properties>
         <environment>dev2</environment>
         <domain.apollo>dv2apl.opoqodev.com</domain.apollo>
