--- a/Borrower/pom.xml
+++ b/Borrower/pom.xml
@@ -13,6 +13,7 @@
     <artifactId>Borrower</artifactId>
     <packaging>jar</packaging>
 
+    <!-- TODO to check if it is still necessary -->
     <properties>
         <environment>dev2</environment>
         <domain.borrower>dv2app.opoqodev.com</domain.borrower>
