--- a/Investor/pom.xml
+++ b/Investor/pom.xml
@@ -15,6 +15,7 @@
     <!--<version>jar</version>-->
     <version>1.0-SNAPSHOT</version>
 
+    <!-- TODO to check if it is still necessary -->
     <properties>
         <environment>dev2</environment>
         <domain.investor>dv2pub.opoqodev.com</domain.investor>
