--- a/Underwriter/pom.xml
+++ b/Underwriter/pom.xml
@@ -13,6 +13,7 @@
     <artifactId>Underwriter</artifactId>
     <packaging>jar</packaging>
 
+    <!-- TODO to check if it is still necessary -->
     <properties>
         <environment>dev2</environment>
         <domain.underwriter>dv2app.opoqodev.com</domain.underwriter>
