--- a/Apollo/pom.xml
+++ b/Apollo/pom.xml
@@ -245,7 +245,7 @@
         <dependency>
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
-            <version>19.0</version>
+            <version>28.1-jre</version>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
